--- a/OC/config.plist
+++ b/OC/config.plist
@@ -1282,7 +1282,7 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02941130CDN9PRUE</string>
+			<string></string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
@@ -1298,9 +1298,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro16,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02ZJ3ZDMD6N</string>
+			<string></string>
 			<key>SystemUUID</key>
-			<string>C4E945EA-D0AF-43EE-9620-D2DECDC408D0</string>
+			<string></string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
